--- a/index.html
+++ b/index.html
@@ -394,6 +394,10 @@ div.querySelectorAll("button[data-add]").forEach(btn=>{
     update();
   };
 });
+    box.appendChild(div);
+  });
+}
+
 /* Save / Load */
 function key(){
   return `stable-${yearSel.value}-${monthSel.value}`;
