--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ th{ font-size:12px; color:var(--muted); }
 }
 .kpi .value{ font-size:28px; font-weight:800; }
 
+.sticky-remaining {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
 /* ✅ safer lock: disables inputs & add buttons, not the whole UI */
 .locked input,
 .locked select,
@@ -122,7 +128,7 @@ th{ font-size:12px; color:var(--muted); }
   </div>
 
   <!-- REMAINING -->
-  <div class="card">
+  <div class="card sticky-remaining">
     <div class="kpi">
       <div>Remaining This Month</div>
       <div class="value" id="remaining">$0.00</div>
