--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@ table{ width:100%; border-collapse:collapse; }
 th, td{ padding:8px; border-bottom:1px solid var(--line); text-align:left; }
 th{ font-size:12px; color:var(--muted); }
 
+
+table input {
+  background: #fafafa;
+}
+
+table td {
+  vertical-align: middle;
+}
+
+table tr:hover {
+  background: #f8fafc;
+}
+
 .remove{ cursor:pointer; color:#94a3b8; font-size:18px; }
 .remove:hover{ color:#ef4444; }
 
@@ -93,6 +106,19 @@ th{ font-size:12px; color:var(--muted); }
 .locked #addDebt{
   pointer-events:none;
   opacity:.6;
+}
+
+#debt th:nth-child(2),
+#debt th:nth-child(3),
+#debt th:nth-child(4),
+#debt th:nth-child(5) {
+  font-weight: 500;
+}
+
+#debt td:nth-child(6),
+#debt td:nth-child(7),
+#debt td:nth-child(8) {
+  font-weight: 600;
 }
 
 /* debug pill */
