--- a/index.html
+++ b/index.html
@@ -150,6 +150,55 @@ table tr:hover {
 @media (max-width:480px){
   .row{ grid-template-columns:1fr; }
 }
+
+/* ===== MOBILE: STOP HORIZONTAL SCROLL ===== */
+@media (max-width: 430px) {
+
+  /* Prevent sideways scroll globally */
+  body {
+    overflow-x: hidden;
+  }
+
+  /* Turn tables into cards */
+  table, thead, tbody, tr {
+    display: block;
+    width: 100%;
+  }
+
+  thead {
+    display: none;
+  }
+
+  tbody tr {
+    background: #ffffff;
+    border: 1px solid var(--line);
+    border-radius: 14px;
+    padding: 12px;
+    margin-bottom: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,.04);
+  }
+
+  tbody td {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 0;
+    border: none;
+  }
+
+  tbody td::before {
+    content: attr(data-label);
+    font-size: 12px;
+    color: var(--muted);
+    font-weight: 600;
+  }
+
+  tbody td input {
+    max-width: 55%;
+    text-align: right;
+  }
+}
+
 </style>
 </head>
 
@@ -319,19 +368,17 @@ $("addBill").addEventListener("click", () => {
   `);
 });
 
-$("addDebt").addEventListener("click", () => {
-  setDebug("Add Debt clicked ✅");
-  if(locked) return;
-  addRow(debtT, `
-    <td><input></td>
-    <td><input type="number" inputmode="decimal"></td>
-    <td><input type="number" inputmode="decimal"></td>
-    <td><input type="number" inputmode="decimal"></td>
-    <td><input type="number" inputmode="decimal"></td>
-    <td>$0.00</td>
-    <td>$0.00</td>
-    <td>$0.00</td>
-  `);
+$("addDebt").onclick = ()=>!locked && addRow(debtT,
+  `<td data-label="Debt"><input></td>
+   <td data-label="Balance"><input type="number"></td>
+   <td data-label="APR %"><input type="number"></td>
+   <td data-label="Payment"><input type="number"></td>
+   <td data-label="Extra"><input type="number"></td>
+   <td data-label="Interest">$0.00</td>
+   <td data-label="Principal">$0.00</td>
+   <td data-label="New Balance">$0.00</td>`
+);
+
 });
 
 /* Lock */
