--- a/index.html
+++ b/index.html
@@ -154,16 +154,26 @@ table tr:hover {
 /* ===== MOBILE: STOP HORIZONTAL SCROLL ===== */
 @media (max-width: 430px) {
 
-  /* Prevent sideways scroll globally */
-  body {
+  /* Absolute final guard against sideways scroll */
+  .wrap,
+  .card,
+  table,
+  tbody,
+  tr,
+  td {
+    max-width: 100%;
     overflow-x: hidden;
   }
 
-  /* Turn tables into cards */
-  table, thead, tbody, tr {
-    display: block;
+  /* Inputs must never force width */
+  tbody td input {
     width: 100%;
+    max-width: 140px;   /* key line */
+    box-sizing: border-box;
   }
+
+}
+
 
   thead {
     display: none;
