--- a/index.html
+++ b/index.html
@@ -174,6 +174,22 @@ table tr:hover {
 
 }
 
+@media (max-width: 430px) {
+
+  /* Make mobile field labels readable */
+  tbody td::before {
+    color: #0f172a;        /* solid text */
+    font-weight: 700;     /* stronger */
+    font-size: 13px;
+    opacity: 1;
+  }
+
+  /* Slight spacing so label/input don’t blur together */
+  tbody td {
+    gap: 10px;
+  }
+
+}
 
   thead {
     display: none;
