--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@ h2{ margin:0 0 12px; font-size:18px; }
   cursor:pointer;
 }
 
+#breakdownContent {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  row-gap: 6px;
+}
+
+.breakdown-line {
+  display: contents;
+}
+
+.breakdown-line span:last-child {
+  font-weight: 600;
+}
+
+.breakdown-total {
+  margin-top: 6px;
+  padding-top: 6px;
+  border-top: 1px solid var(--line);
+  font-weight: 700;
+}
+
 .section-toggle {
   font-size:13px;
   color:var(--muted);
@@ -292,6 +313,9 @@ table tr:hover {
     <div class="kpi">
       <div>Remaining This Month</div>
       <div class="value" id="remaining">$0.00</div>
+<div class="card" id="breakdown" style="font-size:14px;color:#475569;">
+  <div id="breakdownContent"></div>
+</div>
     </div>
   </div>
 
@@ -460,6 +484,36 @@ function wireRow(tr){
     i.addEventListener("change", update);
   });
 
+
+function renderBreakdown(start, income, bills, debt, remainingValue){
+  const box = document.getElementById("breakdownContent");
+  box.innerHTML = `
+    <div class="breakdown-line">
+      <span>Starting Balance</span>
+      <span>${money(start)}</span>
+    </div>
+
+    <div class="breakdown-line">
+      <span>Income</span>
+      <span style="color:#16a34a">+${money(income)}</span>
+    </div>
+
+    <div class="breakdown-line">
+      <span>Bills</span>
+      <span style="color:#dc2626">−${money(bills)}</span>
+    </div>
+
+    <div class="breakdown-line">
+      <span>Debt Payments</span>
+      <span style="color:#dc2626">−${money(debt)}</span>
+    </div>
+
+    <div class="breakdown-line breakdown-total">
+      <span>Remaining</span>
+      <span>${money(remainingValue)}</span>
+    </div>
+  `;
+}
   const paid = tr.querySelector('td[data-label="Paid"] input');
   const paidDate = tr.querySelector('td[data-label="Paid Date"] input');
 
@@ -626,7 +680,12 @@ function update(){
   const income = sumIncome();
   const bills  = sumUnpaidBills();
   const debt   = calcDebtOut();
-  remaining.textContent = money(start + income - bills - debt);
+
+  const remainingValue = start + income - bills - debt;
+  remaining.textContent = money(remainingValue);
+
+  renderBreakdown(start, income, bills, debt, remainingValue);
+
   save();
 }
 
