--- a/index.html
+++ b/index.html
@@ -286,6 +286,60 @@ table tr:hover {
     max-width: 140px;
     text-align: right;
   }
+
+/* ===== DEBT CARDS ===== */
+.debt-card{
+  border:1px solid var(--line);
+  border-radius:14px;
+  padding:14px;
+  margin-bottom:12px;
+  background:#fff;
+  box-shadow:0 4px 12px rgba(0,0,0,.04);
+}
+
+.debt-title{
+  font-weight:700;
+  font-size:16px;
+  margin-bottom:10px;
+}
+
+.debt-field{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:8px;
+}
+
+.debt-field label{
+  font-size:13px;
+  color:var(--muted);
+}
+
+.debt-field input{
+  max-width:140px;
+  text-align:right;
+}
+
+.debt-results{
+  margin-top:10px;
+  padding-top:10px;
+  border-top:1px dashed var(--line);
+  font-size:13px;
+}
+
+.debt-results div{
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:4px;
+  font-weight:600;
+}
+
+.debt-remove{
+  margin-top:10px;
+  background:#e5e7eb;
+  color:#334155;
+}
+
 }
 </style>
 </head>
@@ -374,15 +428,8 @@ table tr:hover {
   <span class="section-toggle">Hide</span>
 </div>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Debt</th><th>Balance</th><th>APR %</th><th>Payment</th><th>Extra</th>
-          <th>Interest</th><th>Principal</th><th>New Balance</th><th></th>
-        </tr>
-      </thead>
-      <tbody id="debt"></tbody>
-    </table>
+    <div id="debt"></div>
+<button id="addDebt" type="button">+ Add Debt</button>
     <button id="addDebt" type="button">+ Add Debt</button>
   </div>
 
@@ -466,13 +513,16 @@ function getBillsData(){
 }
 
 function getDebtData(){
-  return [...debtT.children].map(r => ({
-    name: r.children[0].querySelector("input").value,
-    balance: r.children[1].querySelector("input").value,
-    apr: r.children[2].querySelector("input").value,
-    payment: r.children[3].querySelector("input").value,
-    extra: r.children[4].querySelector("input").value
-  }));
+  return [...debtT.querySelectorAll(".debt-card")].map(card=>{
+    const i = card.querySelectorAll("input");
+    return {
+      name: i[0].value,
+      balance: i[1].value,
+      apr: i[2].value,
+      payment: i[3].value,
+      extra: i[4].value
+    };
+  });
 }
 
 function restoreTable(table, rows, rowBuilder){
@@ -518,19 +568,9 @@ function loadBillRows(data=[]){
 }
 
 function loadDebtRows(data=[]){
-  data.forEach(row => {
-    addRow(debtT, `
-      <td data-label="Debt"><input value="${row.name || ""}"></td>
-      <td data-label="Balance"><input type="number" inputmode="decimal" value="${row.balance || ""}"></td>
-      <td data-label="APR %"><input type="number" inputmode="decimal" value="${row.apr || ""}"></td>
-      <td data-label="Payment"><input type="number" inputmode="decimal" value="${row.payment || ""}"></td>
-      <td data-label="Extra"><input type="number" inputmode="decimal" value="${row.extra || ""}"></td>
-      <td data-label="Interest">$0.00</td>
-      <td data-label="Principal">$0.00</td>
-      <td data-label="New Balance">$0.00</td>
-    `);
-  });
+  data.forEach(d => createDebtCard(d));
 }
+
 /* Row helper */
 function addRow(table, cellsHtml){
   const tr = document.createElement("tr");
@@ -662,21 +702,56 @@ $("addBill").addEventListener("click", () => {
   `);
 });
 
-$("addDebt").addEventListener("click", () => {
-  setDebug("Add Debt clicked ✅");
-  if(locked) return;
+function createDebtCard(data = {}){
+  const card = document.createElement("div");
+  card.className = "debt-card";
 
-  addRow(debtT,
-    `<td data-label="Debt"><input></td>
-     <td data-label="Balance"><input type="number" inputmode="decimal"></td>
-     <td data-label="APR %"><input type="number" inputmode="decimal"></td>
-     <td data-label="Payment"><input type="number" inputmode="decimal"></td>
-     <td data-label="Extra"><input type="number" inputmode="decimal"></td>
-     <td data-label="Interest">$0.00</td>
-     <td data-label="Principal">$0.00</td>
-     <td data-label="New Balance">$0.00</td>`
-  );
-});
+  card.innerHTML = `
+    <div class="debt-title">
+      <input placeholder="Debt name" value="${data.name || ""}">
+    </div>
+
+    <div class="debt-field">
+      <label>Balance</label>
+      <input type="number" inputmode="decimal" value="${data.balance || ""}">
+    </div>
+
+    <div class="debt-field">
+      <label>APR %</label>
+      <input type="number" inputmode="decimal" value="${data.apr || ""}">
+    </div>
+
+    <div class="debt-field">
+      <label>Payment</label>
+      <input type="number" inputmode="decimal" value="${data.payment || ""}">
+    </div>
+
+    <div class="debt-field">
+      <label>Extra</label>
+      <input type="number" inputmode="decimal" value="${data.extra || ""}">
+    </div>
+
+    <div class="debt-results">
+      <div><span>Interest</span><span class="interest">$0.00</span></div>
+      <div><span>Principal</span><span class="principal">$0.00</span></div>
+      <div><span>New Balance</span><span class="newbal">$0.00</span></div>
+    </div>
+
+    <button class="debt-remove">Remove Debt</button>
+  `;
+
+  card.querySelector(".debt-remove").onclick = () => {
+    if(locked) return;
+    card.remove();
+    update();
+  };
+
+  card.querySelectorAll("input").forEach(i=>{
+    i.addEventListener("input", update);
+  });
+
+  debtT.appendChild(card);
+}
 
 
 /* Lock */
@@ -719,22 +794,26 @@ function sumBills(){
 
 function calcDebtOut(){
   let total = 0;
-  debtT.querySelectorAll("tr").forEach(r=>{
-    const bal   = Number(r.children[1].querySelector("input")?.value) || 0;
-    const apr   = Number(r.children[2].querySelector("input")?.value) || 0;
-    const pay   = Number(r.children[3].querySelector("input")?.value) || 0;
-    const extra = Number(r.children[4].querySelector("input")?.value) || 0;
 
-    const interest  = bal * (apr/100/12);
+  debtT.querySelectorAll(".debt-card").forEach(card=>{
+    const inputs = card.querySelectorAll("input");
+
+    const bal   = Number(inputs[1].value) || 0;
+    const apr   = Number(inputs[2].value) || 0;
+    const pay   = Number(inputs[3].value) || 0;
+    const extra = Number(inputs[4].value) || 0;
+
+    const interest  = bal * (apr / 100 / 12);
     const principal = Math.max(pay - interest, 0) + extra;
     const newBal    = Math.max(bal - principal, 0);
 
-    r.children[5].textContent = money(interest);
-    r.children[6].textContent = money(principal);
-    r.children[7].textContent = money(newBal);
+    card.querySelector(".interest").textContent  = money(interest);
+    card.querySelector(".principal").textContent = money(principal);
+    card.querySelector(".newbal").textContent    = money(newBal);
 
     total += pay + extra;
   });
+
   return total;
 }
 
